// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoControls for double digit minutes 1`] = `
<div
  className="controls"
>
  <div
    className="box paddingX2 paddingY2"
  >
    <div
      aria-disabled={false}
      className="tapTransition rounding0 accessibilityOutline pointer"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <svg
        aria-hidden={null}
        aria-label="Play"
        className="light icon iconBlock"
        height={20}
        role="img"
        viewBox="0 0 24 24"
        width={20}
      >
        <path
          d="test-file-stub"
        />
      </svg>
    </div>
  </div>
  <div
    className="box paddingX2 paddingY2"
    style={
      Object {
        "width": 50,
      }
    }
  >
    <div
      className="light alignEnd Text fontSize100 fontWeightNormal"
    >
      15:05
    </div>
  </div>
  <div
    className="box flexGrow paddingX2 paddingY2"
  >
    <div
      className="box relative"
      style={
        Object {
          "height": 16,
        }
      }
    >
      <div
        aria-label="Video progress"
        aria-valuemax={905}
        aria-valuemin="0"
        aria-valuenow={905}
        className="playhead"
        onClick={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseMove={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="progressbar"
        tabIndex="-1"
      >
        <div
          className="absolute box left0 right0 rounding2 secondary xsDisplayFlex"
          style={
            Object {
              "height": 4,
            }
          }
        >
          <div
            className="box light rounding2"
            style={
              Object {
                "height": "100%",
                "width": "100%",
              }
            }
          />
          <div
            className="box circle light marginStartN2"
            style={
              Object {
                "height": 16,
                "marginTop": -6,
                "width": 16,
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="box paddingX2 paddingY2"
    style={
      Object {
        "width": 50,
      }
    }
  >
    <div
      className="light alignEnd Text fontSize100 fontWeightNormal"
    >
      15:05
    </div>
  </div>
  <div
    className="box paddingX2 paddingY2"
  >
    <div
      aria-disabled={false}
      className="tapTransition rounding0 accessibilityOutline pointer"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <svg
        aria-hidden={null}
        aria-label="Unmute"
        className="rtlSupport light icon iconBlock"
        height={20}
        role="img"
        viewBox="0 0 24 24"
        width={20}
      >
        <path
          d="test-file-stub"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`VideoControls for double digit seconds 1`] = `
<div
  className="controls"
>
  <div
    className="box paddingX2 paddingY2"
  >
    <div
      aria-disabled={false}
      className="tapTransition rounding0 accessibilityOutline pointer"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <svg
        aria-hidden={null}
        aria-label="Play"
        className="light icon iconBlock"
        height={20}
        role="img"
        viewBox="0 0 24 24"
        width={20}
      >
        <path
          d="test-file-stub"
        />
      </svg>
    </div>
  </div>
  <div
    className="box paddingX2 paddingY2"
    style={
      Object {
        "width": 50,
      }
    }
  >
    <div
      className="light alignEnd Text fontSize100 fontWeightNormal"
    >
      00:15
    </div>
  </div>
  <div
    className="box flexGrow paddingX2 paddingY2"
  >
    <div
      className="box relative"
      style={
        Object {
          "height": 16,
        }
      }
    >
      <div
        aria-label="Video progress"
        aria-valuemax={15}
        aria-valuemin="0"
        aria-valuenow={15}
        className="playhead"
        onClick={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseMove={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="progressbar"
        tabIndex="-1"
      >
        <div
          className="absolute box left0 right0 rounding2 secondary xsDisplayFlex"
          style={
            Object {
              "height": 4,
            }
          }
        >
          <div
            className="box light rounding2"
            style={
              Object {
                "height": "100%",
                "width": "100%",
              }
            }
          />
          <div
            className="box circle light marginStartN2"
            style={
              Object {
                "height": 16,
                "marginTop": -6,
                "width": 16,
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="box paddingX2 paddingY2"
    style={
      Object {
        "width": 50,
      }
    }
  >
    <div
      className="light alignEnd Text fontSize100 fontWeightNormal"
    >
      00:15
    </div>
  </div>
  <div
    className="box paddingX2 paddingY2"
  >
    <div
      aria-disabled={false}
      className="tapTransition rounding0 accessibilityOutline pointer"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <svg
        aria-hidden={null}
        aria-label="Unmute"
        className="rtlSupport light icon iconBlock"
        height={20}
        role="img"
        viewBox="0 0 24 24"
        width={20}
      >
        <path
          d="test-file-stub"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`VideoControls for single digit minutes 1`] = `
<div
  className="controls"
>
  <div
    className="box paddingX2 paddingY2"
  >
    <div
      aria-disabled={false}
      className="tapTransition rounding0 accessibilityOutline pointer"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <svg
        aria-hidden={null}
        aria-label="Play"
        className="light icon iconBlock"
        height={20}
        role="img"
        viewBox="0 0 24 24"
        width={20}
      >
        <path
          d="test-file-stub"
        />
      </svg>
    </div>
  </div>
  <div
    className="box paddingX2 paddingY2"
    style={
      Object {
        "width": 50,
      }
    }
  >
    <div
      className="light alignEnd Text fontSize100 fontWeightNormal"
    >
      01:05
    </div>
  </div>
  <div
    className="box flexGrow paddingX2 paddingY2"
  >
    <div
      className="box relative"
      style={
        Object {
          "height": 16,
        }
      }
    >
      <div
        aria-label="Video progress"
        aria-valuemax={65}
        aria-valuemin="0"
        aria-valuenow={65}
        className="playhead"
        onClick={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseMove={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="progressbar"
        tabIndex="-1"
      >
        <div
          className="absolute box left0 right0 rounding2 secondary xsDisplayFlex"
          style={
            Object {
              "height": 4,
            }
          }
        >
          <div
            className="box light rounding2"
            style={
              Object {
                "height": "100%",
                "width": "100%",
              }
            }
          />
          <div
            className="box circle light marginStartN2"
            style={
              Object {
                "height": 16,
                "marginTop": -6,
                "width": 16,
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="box paddingX2 paddingY2"
    style={
      Object {
        "width": 50,
      }
    }
  >
    <div
      className="light alignEnd Text fontSize100 fontWeightNormal"
    >
      01:05
    </div>
  </div>
  <div
    className="box paddingX2 paddingY2"
  >
    <div
      aria-disabled={false}
      className="tapTransition rounding0 accessibilityOutline pointer"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <svg
        aria-hidden={null}
        aria-label="Unmute"
        className="rtlSupport light icon iconBlock"
        height={20}
        role="img"
        viewBox="0 0 24 24"
        width={20}
      >
        <path
          d="test-file-stub"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`VideoControls for single digit seconds 1`] = `
<div
  className="controls"
>
  <div
    className="box paddingX2 paddingY2"
  >
    <div
      aria-disabled={false}
      className="tapTransition rounding0 accessibilityOutline pointer"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <svg
        aria-hidden={null}
        aria-label="Play"
        className="light icon iconBlock"
        height={20}
        role="img"
        viewBox="0 0 24 24"
        width={20}
      >
        <path
          d="test-file-stub"
        />
      </svg>
    </div>
  </div>
  <div
    className="box paddingX2 paddingY2"
    style={
      Object {
        "width": 50,
      }
    }
  >
    <div
      className="light alignEnd Text fontSize100 fontWeightNormal"
    >
      00:05
    </div>
  </div>
  <div
    className="box flexGrow paddingX2 paddingY2"
  >
    <div
      className="box relative"
      style={
        Object {
          "height": 16,
        }
      }
    >
      <div
        aria-label="Video progress"
        aria-valuemax={5}
        aria-valuemin="0"
        aria-valuenow={5}
        className="playhead"
        onClick={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseMove={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="progressbar"
        tabIndex="-1"
      >
        <div
          className="absolute box left0 right0 rounding2 secondary xsDisplayFlex"
          style={
            Object {
              "height": 4,
            }
          }
        >
          <div
            className="box light rounding2"
            style={
              Object {
                "height": "100%",
                "width": "100%",
              }
            }
          />
          <div
            className="box circle light marginStartN2"
            style={
              Object {
                "height": 16,
                "marginTop": -6,
                "width": 16,
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="box paddingX2 paddingY2"
    style={
      Object {
        "width": 50,
      }
    }
  >
    <div
      className="light alignEnd Text fontSize100 fontWeightNormal"
    >
      00:05
    </div>
  </div>
  <div
    className="box paddingX2 paddingY2"
  >
    <div
      aria-disabled={false}
      className="tapTransition rounding0 accessibilityOutline pointer"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <svg
        aria-hidden={null}
        aria-label="Unmute"
        className="rtlSupport light icon iconBlock"
        height={20}
        role="img"
        viewBox="0 0 24 24"
        width={20}
      >
        <path
          d="test-file-stub"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`VideoControls rounds for partial seconds 1`] = `
<div
  className="controls"
>
  <div
    className="box paddingX2 paddingY2"
  >
    <div
      aria-disabled={false}
      className="tapTransition rounding0 accessibilityOutline pointer"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <svg
        aria-hidden={null}
        aria-label="Play"
        className="light icon iconBlock"
        height={20}
        role="img"
        viewBox="0 0 24 24"
        width={20}
      >
        <path
          d="test-file-stub"
        />
      </svg>
    </div>
  </div>
  <div
    className="box paddingX2 paddingY2"
    style={
      Object {
        "width": 50,
      }
    }
  >
    <div
      className="light alignEnd Text fontSize100 fontWeightNormal"
    >
      01:07
    </div>
  </div>
  <div
    className="box flexGrow paddingX2 paddingY2"
  >
    <div
      className="box relative"
      style={
        Object {
          "height": 16,
        }
      }
    >
      <div
        aria-label="Video progress"
        aria-valuemax={67.3}
        aria-valuemin="0"
        aria-valuenow={67.3}
        className="playhead"
        onClick={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseMove={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="progressbar"
        tabIndex="-1"
      >
        <div
          className="absolute box left0 right0 rounding2 secondary xsDisplayFlex"
          style={
            Object {
              "height": 4,
            }
          }
        >
          <div
            className="box light rounding2"
            style={
              Object {
                "height": "100%",
                "width": "100%",
              }
            }
          />
          <div
            className="box circle light marginStartN2"
            style={
              Object {
                "height": 16,
                "marginTop": -6,
                "width": 16,
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="box paddingX2 paddingY2"
    style={
      Object {
        "width": 50,
      }
    }
  >
    <div
      className="light alignEnd Text fontSize100 fontWeightNormal"
    >
      01:07
    </div>
  </div>
  <div
    className="box paddingX2 paddingY2"
  >
    <div
      aria-disabled={false}
      className="tapTransition rounding0 accessibilityOutline pointer"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <svg
        aria-hidden={null}
        aria-label="Unmute"
        className="rtlSupport light icon iconBlock"
        height={20}
        role="img"
        viewBox="0 0 24 24"
        width={20}
      >
        <path
          d="test-file-stub"
        />
      </svg>
    </div>
  </div>
</div>
`;
